# caelestia-shell

./: .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.qml
.github/ISSUE_TEMPLATE/: crash.yml
.github/workflows/: check-format.yml  lint.yml  release.yml  update-flake-inputs.yml  update-image.yml
components/: Anim.qml  CAnim.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  MaterialIcon.qml  PropertyRow.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledText.qml
components/containers/: StyledFlickable.qml  StyledListView.qml
components/controls/: CircularIndicator.qml  CircularProgress.qml  CollapsibleSection.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledInputField.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  ToggleButton.qml  ToggleRow.qml  Tooltip.qml
components/effects/: Elevation.qml  InnerBorder.qml
components/filedialog/: CurrentItem.qml  DialogButtons.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml
components/widgets/: ExtraIndicator.qml
modules/: IdleMonitors.qml  Shortcuts.qml
modules/areapicker/: Picker.qml
modules/background/: Background.qml  DesktopClock.qml  Visualiser.qml  Wallpaper.qml
modules/bar/: Bar.qml  BarWrapper.qml
modules/controlcenter/: ControlCenter.qml  NavRail.qml  Panes.qml  WindowFactory.qml  WindowTitle.qml
modules/dashboard/: Content.qml  (+8 more)
plugin/src/Caelestia/: CMakeLists.txt  cutils.cpp
plugin/src/Caelestia/Blobs/: CMakeLists.txt  blobgroup.cpp  blobgroup.hpp  blobmaterial.cpp  blobmaterial.hpp  blobrect.cpp  blobrect.hpp  blobshape.cpp  blobshape.hpp
plugin/src/Caelestia/Blobs/shaders/: blob.frag
plugin/src/Caelestia/Components/: CMakeLists.txt
plugin/src/Caelestia/Config/: CMakeLists.txt  anim.cpp  anim.hpp  appearanceconfig.cpp  appearanceconfig.hpp  borderconfig.hpp  config.cpp  config.hpp  configattached.cpp  configattached.hpp  configobject.cpp  configobject.hpp  controlcenterconfig.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  notifsconfig.hpp  rootconfig.cpp  rootconfig.hpp  serviceconfig.hpp  tokens.cpp  tokens.hpp  tokensattached.cpp  tokensattached.hpp  userpaths.hpp
plugin/src/Caelestia/Internal/: CMakeLists.txt  cachingimagemanager.cpp  hyprextras.cpp  hyprextras.hpp
plugin/src/Caelestia/Services/: lyrics.cpp  lyrics.hpp
services/: Colours.qml  Hypr.qml  LyricsService.qml  NetworkUsage.qml  Nmcli.qml  NotifData.qml  Players.qml  SystemUsage.qml  VPN.qml  Wallpapers.qml  Weather.qml
utils/: Icons.qml  SysInfo.qml
(+163 files in other folders)
